[AQE Autothon] Adding PPT file and OR file to store values and variables

--- a/AQE_robotsolution/report.html
+++ b/AQE_robotsolution/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,23121],[[4,5,6,0,[],[1,37,23084],[[7,8,9,0,[],[1,38,23083],[[10,11,12,0,[],[1,38,23083],[[13,14,15,0,[],[1,38,23083],[],[[16,0,1,0,[],[1,1230,21891],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]]],[],[],[1,1,1,1]]],[],[],[1,1,1,1]]],[],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,36107],[[4,5,6,0,[],[1,36,36055],[[7,8,9,0,[],[1,38,36053],[[10,11,12,0,[],[1,38,36053],[[13,14,15,0,[],[1,38,36052],[],[[10,0,1,0,[],[1,1240,34833],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]]],[],[],[1,1,1,1]]],[],[],[1,1,1,1]]],[],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*AQE robotsolution","*C:\\AQE_thon\\PullCloud\\AQE_robotsolution","*.","*Robot","*C:\\AQE_thon\\PullCloud\\AQE_robotsolution\\robot","*robot","*Resources","*C:\\AQE_thon\\PullCloud\\AQE_robotsolution\\robot\\resources","*robot/resources","*AQE","*C:\\AQE_thon\\PullCloud\\AQE_robotsolution\\robot\\resources\\AQE","*robot/resources/AQE","*testAutomation","*C:\\AQE_thon\\PullCloud\\AQE_robotsolution\\robot\\resources\\AQE\\testAutomation.robot","*robot/resources/AQE/testAutomation.robot","*Demo"]);
+window.output["strings"] = window.output["strings"].concat(["*","*AQE robotsolution","*C:\\AQE_thon\\PullCloud\\AQE_robotsolution","*.","*Robot","*C:\\AQE_thon\\PullCloud\\AQE_robotsolution\\robot","*robot","*Resources","*C:\\AQE_thon\\PullCloud\\AQE_robotsolution\\robot\\resources","*robot/resources","*AQE","*C:\\AQE_thon\\PullCloud\\AQE_robotsolution\\robot\\resources\\AQE","*robot/resources/AQE","*testAutomation","*C:\\AQE_thon\\PullCloud\\AQE_robotsolution\\robot\\resources\\AQE\\testAutomation.robot","*robot/resources/AQE/testAutomation.robot"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:22","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:22","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:23","fail":0,"id":"s1","label":"AQE robotsolution","name":"AQE robotsolution","pass":1},{"elapsed":"00:00:23","fail":0,"id":"s1-s1","label":"AQE robotsolution.Robot","name":"Robot","pass":1},{"elapsed":"00:00:23","fail":0,"id":"s1-s1-s1","label":"AQE robotsolution.Robot.Resources","name":"Resources","pass":1},{"elapsed":"00:00:23","fail":0,"id":"s1-s1-s1-s1","label":"AQE robotsolution.Robot.Resources.AQE","name":"AQE","pass":1},{"elapsed":"00:00:23","fail":0,"id":"s1-s1-s1-s1-s1","label":"AQE robotsolution.Robot.Resources.AQE.testAutomation","name":"testAutomation","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:35","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:35","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:36","fail":0,"id":"s1","label":"AQE robotsolution","name":"AQE robotsolution","pass":1},{"elapsed":"00:00:36","fail":0,"id":"s1-s1","label":"AQE robotsolution.Robot","name":"Robot","pass":1},{"elapsed":"00:00:36","fail":0,"id":"s1-s1-s1","label":"AQE robotsolution.Robot.Resources","name":"Resources","pass":1},{"elapsed":"00:00:36","fail":0,"id":"s1-s1-s1-s1","label":"AQE robotsolution.Robot.Resources.AQE","name":"AQE","pass":1},{"elapsed":"00:00:36","fail":0,"id":"s1-s1-s1-s1-s1","label":"AQE robotsolution.Robot.Resources.AQE.testAutomation","name":"testAutomation","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1573604303671;
+window.output["baseMillis"] = 1573647657923;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 23136;
+window.output["generated"] = 36142;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
